@@ -29,11 +29,9 @@ public class AgendaServiceImpl implements AgendaService {
     @Transactional
     public boolean create(Agenda agenda) {
         AgendaEntity entity = new AgendaEntity();
-        EventEntity event = eventRepository.findById(agenda.getEventId()).orElse(null);
+        EventEntity event = eventRepository.findById(agenda.getId()).orElse(null);
 
         if (event == null) return false;
-
-        entity.setEvent(event);
 
         entity.setDate(agenda.getDate());
         entity.setTime(agenda.getTime());
@@ -56,11 +54,10 @@ public class AgendaServiceImpl implements AgendaService {
         AgendaEntity existing = agendaRepository.findById(agenda.getId()).orElse(null);
         if (existing == null) return false;
 
-        EventEntity event = eventRepository.findById(agenda.getEventId()).orElse(null);
+        EventEntity event = eventRepository.findById(agenda.getId()).orElse(null);
 
         if (event == null) return false;
 
-        existing.setEvent(event);
         existing.setDate(agenda.getDate());
         existing.setTime(agenda.getTime());
         agendaRepository.save(existing);
@@ -69,7 +66,7 @@ public class AgendaServiceImpl implements AgendaService {
 
     @Override
     @Transactional
-    public boolean delete(Integer id) {
+    public boolean delete(Long id) {
         if (!agendaRepository.existsById(id)) return false;
         agendaRepository.deleteById(id);
         return true;
@@ -77,7 +74,7 @@ public class AgendaServiceImpl implements AgendaService {
 
     @Override
     @Transactional(readOnly = true)
-    public Agenda getById(Integer id) {
+    public Agenda getById(Long id) {
         return agendaRepository.findById(id)
                 .map(this::convertToDto)
                 .orElse(null);
@@ -85,7 +82,7 @@ public class AgendaServiceImpl implements AgendaService {
 
     @Override
     @Transactional
-    public boolean addTaskToAgenda(Integer agendaId, AgendaTask newTask) {
+    public boolean addTaskToAgenda(Long agendaId, AgendaTask newTask) {
         Optional<AgendaEntity> optionalAgenda = agendaRepository.findById(agendaId);
         if (optionalAgenda.isEmpty()) return false;
 
@@ -97,7 +94,6 @@ public class AgendaServiceImpl implements AgendaService {
         taskEntity.setSupplierId(newTask.getSupplierId());
         taskEntity.setSupplierType(newTask.getSupplierType());
 
-        taskEntity.setAgenda(agenda);
         agenda.getTasks().add(taskEntity);
 
         agendaRepository.save(agenda);
@@ -106,7 +102,7 @@ public class AgendaServiceImpl implements AgendaService {
 
     @Override
     @Transactional
-    public boolean updateTask(Integer agendaId, Integer taskId, AgendaTask updatedTask) {
+    public boolean updateTask(Long agendaId, Long taskId, AgendaTask updatedTask) {
         AgendaTaskEntity task = agendaTaskRepository.findByAgendaIdAndTaskId(agendaId, taskId);
         if (task == null) return false;
 
@@ -121,7 +117,7 @@ public class AgendaServiceImpl implements AgendaService {
 
     @Override
     @Transactional
-    public boolean deleteTask(Integer agendaId, Integer taskId) {
+    public boolean deleteTask(Long agendaId, Long taskId) {
         AgendaTaskEntity task = agendaTaskRepository.findByAgendaIdAndTaskId(agendaId, taskId);
         if (task == null) return false;
 
@@ -131,7 +127,7 @@ public class AgendaServiceImpl implements AgendaService {
 
     @Override
     @Transactional(readOnly = true)
-    public AgendaTask getTaskById(Integer agendaId, Integer taskId) {
+    public AgendaTask getTaskById(Long agendaId, Long taskId) {
         return Optional.ofNullable(agendaTaskRepository.findByAgendaIdAndTaskId(agendaId, taskId))
                 .map(this::convertTaskToDto)
                 .orElse(null);
@@ -140,12 +136,11 @@ public class AgendaServiceImpl implements AgendaService {
     private Agenda convertToDto(AgendaEntity entity) {
         Agenda dto = new Agenda();
         dto.setId(entity.getId());
-        dto.setEventId(entity.getEvent().getEventId());
         dto.setDate(entity.getDate());
         dto.setTime(entity.getTime());
         dto.setTasks(entity.getTasks().stream()
                 .map(this::convertTaskToDto)
-                .collect(Collectors.toList()));
+                .toList());
         return dto;
     }
 
